# gitstuff

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  requirements.txt  svelte.config.js
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/api/: github.py  urls.py  views.py
backend/backend/config/: settings.py  urls.py  views.py
backend/gh_auth/: apps.py  custom_oauth_client.py  urls.py  views.py
frontend/: .dockerignore  .env.example  Dockerfile  bun.lockb  package.json  pnpm-lock.yaml
frontend/.svelte-kit/: ambient.d.ts
frontend/.svelte-kit/types/: route_meta_data.json
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
reposhare/: manage.py
reposhare/api/: apps.py  custom_serializers.py  models.py  serializers.py  urls.py  views.py
reposhare/api/migrations/: 0001_initial.py  0002_delete_post.py
reposhare/api/utils/: github_api.py
reposhare/core/: forms.py  models.py  urls.py  views.py
reposhare/core/migrations/: 0001_initial.py  0002_alter_repo_id.py  0003_alter_repo_id.py  0004_alter_repo_unique_together_remove_repo_content.py
reposhare/core/templates/: choose_repo.html  main_page.html  repo_card.html
reposhare/reposhare/: asgi.py  settings.py  urls.py  wsgi.py
reposhare/static/: base.css  globals.css
reposhare/static/core/: choose_repo.css  main_page.css  repo_card.css
reposhare/templates/: base.html  navbar.html
src/: app.html  global.scss
src/lib/assets/: CalendarIcon.svelte  (+4 more)
src/routes/: +layout.svelte  +page.svelte
(+39 files in other folders)
