[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-rest-auth>=7.0.1",
    "django-cors-headers>=4.7.0",
    "django>=5.1.6",
    "djangorestframework-simplejwt>=5.5.0",
    "djangorestframework>=3.15.2",
]
